--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install dependencies
-        run: python -m pip install -r requirements.txt
+        run: pip install -r requirements.txt
         shell: bash
       - name: Build html templates
         run: python build.py
