--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -5,6 +5,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-python
+        with:
+          python-version: '3.11'
+          cache: 'pip'
       - name: Install dependencies
         run: pip install -r requirements.txt
         shell: bash
