--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -5,7 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
           cache: 'pip'
