--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -10,6 +10,9 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          file_pattern: *.html
       - name: Install dependencies
         run: pip install -r requirements.txt
         shell: bash
